# inventory-system

./: .gitignore  NEA.sln  README.md  SECURITY.md
.github/workflows/: codeql.yml  rust.yml
Inventory/: App.config  Inventory.csproj  Program.cs
Inventory/Classes/: Basket.cs  Category.cs  Database.cs  Hashing.cs  Insights.cs  Logon.cs  Notification.cs  Settings.cs  Using.cs
Inventory/DataForms/: FormViewInsights.Designer.cs  FormViewInsights.cs  FormViewOrders.Designer.cs  FormViewOrders.cs  FormViewStock.Designer.cs
Inventory/LoginForms/: FormAccountCreate.Designer.cs  (+8 more)
MySQL/: CREATE_CustomerOrderDetails.sql  CREATE_CustomerOrders.sql  CREATE_Product.sql  CREATE_Staff.sql  INSERT_Category.sql  INSERT_Customer.sql  INSERT_CustomerOrders.sql  docker-compose.yml
NEA/: .gitignore  NEA.csproj  Program.cs
api/: .env  Cargo.toml  api.sln  diesel.toml
api/api/: Program.cs  api.csproj  appsettings.json
api/api/Controllers/: AccountsController.cs  ProductsController.cs
api/api/Data/: InventoryContext.cs
api/api/Models/: AccessLevel.cs  Account.cs  AccountEntity.cs  AccountSeq.cs  Category.cs  Customer.cs  CustomerOrder.cs  CustomerOrderDetail.cs  Product.cs  Staff.cs
api/api/Properties/: launchSettings.json
api/sql/: INSERT_AccessLevel.sql  INSERT_Account.sql  INSERT_Product.sql  docker-compose.yml  insights.sql  inventory.db  inventory.sqlite
api/src/: main.rs  models.rs  schema.rs
client/: Inventory.sln
sql/: CREATE_AccessLevel.sql  CREATE_Account.sql  CREATE_Category.sql  CREATE_Customer.sql  INSERT_CustomerOrderDetails.sql  docker-compose.yml
(+87 files in other folders)
